# FSS

./: CMakeLists.txt  FileShareServer.pro  README.md  compile.sh  create_deb.sh
etc/: file_share.sql  fsserver.service
include/: apifss.h
install/astra/DEBIAN/: control  postinst
src/: db_manager.cpp  db_manager.h  main.cpp
